[package]
name = "blush"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
colored = "2.0.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
logos = "0.12.0"
bincode = "1.3.3"
serde = {version = "1.0.138", features = ["derive"]}